Semantic Analysis/ESJSParser.py
# Generated from ESJS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ESJSParser ( Parser ):

    grammarFileName = "ESJS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "','", "'var'", "'const'", 
                     "'mut'", "'=>'", "'('", "')'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'**='", "'funcion'", "'{'", "'}'", 
                     "'si'", "'sino'", "'mientras'", "'hacer'", "'para'", 
                     "'de'", "'en'", "'elegir'", "'caso'", "':'", "'porDefecto'", 
                     "'intentar'", "'capturar'", "'finalmente'", "'retornar'", 
                     "'lanzar'", "'romper'", "'continuar'", "'clase'", "'extiende'", 
                     "'constructor'", "'?'", "'&&'", "'||'", "'=='", "'!='", 
                     "'==='", "'!=='", "'<'", "'>'", "'<='", "'>='", "'instanciaDe'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'!'", "'++'", 
                     "'--'", "'tipoDe'", "'vacio'", "'eliminar'", "'esperar'", 
                     "'.'", "'['", "']'", "'verdadero'", "'falso'", "'nulo'", 
                     "'indefinido'", "'Infinito'", "'NuN'", "'Arreglo'", 
                     "'Booleano'", "'Cadena'", "'Fecha'", "'Funcion'", "'Matriz'", 
                     "'Numero'", "'consola'", "'Mate'", "'crear'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUMERO", "CADENA", "ID", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
                      "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_sentenciaDeclaracionVariable = 2
    RULE_tipoVariable = 3
    RULE_sentenciaExpresion = 4
    RULE_paramFuncionFlecha = 5
    RULE_formaFuncion = 6
    RULE_operadorAsignacion = 7
    RULE_sentenciaFuncion = 8
    RULE_funcionAnonima = 9
    RULE_parametros = 10
    RULE_argumentos = 11
    RULE_sentenciaControlFlujo = 12
    RULE_bloque = 13
    RULE_sentenciaSi = 14
    RULE_bloqueOSentencia = 15
    RULE_sentenciaMientras = 16
    RULE_sentenciaHacer = 17
    RULE_sentenciaPara = 18
    RULE_paraClasico = 19
    RULE_inicializador = 20
    RULE_paraDeEn = 21
    RULE_sentenciaElegir = 22
    RULE_caso = 23
    RULE_porDefecto = 24
    RULE_sentenciaIntento = 25
    RULE_sentenciaRetorno = 26
    RULE_sentenciaRota = 27
    RULE_sentenciaClase = 28
    RULE_miembroClase = 29
    RULE_expresion = 30
    RULE_exprTernaria = 31
    RULE_exprLogica = 32
    RULE_exprComparacion = 33
    RULE_operadorComparacion = 34
    RULE_exprAritmetica = 35
    RULE_exprMultiplicativa = 36
    RULE_exprUnaria = 37
    RULE_operadorUnario = 38
    RULE_exprPostfija = 39
    RULE_postfijo = 40
    RULE_primaria = 41
    RULE_builtin = 42
    RULE_crear = 43
    RULE_constructor = 44
    RULE_arregloLiteral = 45
    RULE_listaExpresiones = 46
    RULE_objetoLiteral = 47
    RULE_propiedadObjeto = 48
    RULE_nombrePropiedad = 49

    ruleNames =  [ "programa", "sentencia", "sentenciaDeclaracionVariable", 
                   "tipoVariable", "sentenciaExpresion", "paramFuncionFlecha", 
                   "formaFuncion", "operadorAsignacion", "sentenciaFuncion", 
                   "funcionAnonima", "parametros", "argumentos", "sentenciaControlFlujo", 
                   "bloque", "sentenciaSi", "bloqueOSentencia", "sentenciaMientras", 
                   "sentenciaHacer", "sentenciaPara", "paraClasico", "inicializador", 
                   "paraDeEn", "sentenciaElegir", "caso", "porDefecto", 
                   "sentenciaIntento", "sentenciaRetorno", "sentenciaRota", 
                   "sentenciaClase", "miembroClase", "expresion", "exprTernaria", 
                   "exprLogica", "exprComparacion", "operadorComparacion", 
                   "exprAritmetica", "exprMultiplicativa", "exprUnaria", 
                   "operadorUnario", "exprPostfija", "postfijo", "primaria", 
                   "builtin", "crear", "constructor", "arregloLiteral", 
                   "listaExpresiones", "objetoLiteral", "propiedadObjeto", 
                   "nombrePropiedad" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    NUMERO=84
    CADENA=85
    ID=86
    COMENTARIO_LINEA=87
    COMENTARIO_BLOQUE=88
    WS=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ESJSParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ESJSParser.SentenciaContext,i)


        def EOF(self):
            return self.getToken(ESJSParser.EOF, 0)

        def getRuleIndex(self):
            return ESJSParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ESJSParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.sentencia()
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==1:
                        self.state = 101
                        self.match(ESJSParser.T__0)


                    self.state = 104
                    self.sentencia() 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 110
                self.match(ESJSParser.T__0)


            self.state = 113
            self.match(ESJSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentenciaDeclaracionVariable(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaDeclaracionVariableContext,0)


        def sentenciaFuncion(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaFuncionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(ESJSParser.BloqueContext,0)


        def sentenciaControlFlujo(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaControlFlujoContext,0)


        def sentenciaClase(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaClaseContext,0)


        def sentenciaIntento(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaIntentoContext,0)


        def sentenciaRetorno(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaRetornoContext,0)


        def sentenciaRota(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaRotaContext,0)


        def sentenciaExpresion(self):
            return self.getTypedRuleContext(ESJSParser.SentenciaExpresionContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = ESJSParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.sentenciaDeclaracionVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.sentenciaFuncion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.bloque()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.sentenciaControlFlujo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.sentenciaClase()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.sentenciaIntento()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.sentenciaRetorno()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 122
                self.sentenciaRota()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 123
                self.sentenciaExpresion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaDeclaracionVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoVariable(self):
            return self.getTypedRuleContext(ESJSParser.TipoVariableContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ESJSParser.ID)
            else:
                return self.getToken(ESJSParser.ID, i)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ESJSParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ESJSParser.ExpresionContext,i)


        def getRuleIndex(self):
            return ESJSParser.RULE_sentenciaDeclaracionVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaDeclaracionVariable" ):
                return visitor.visitSentenciaDeclaracionVariable(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaDeclaracionVariable(self):

        localctx = ESJSParser.SentenciaDeclaracionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentenciaDeclaracionVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.tipoVariable()
            self.state = 127
            self.match(ESJSParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 128
                self.match(ESJSParser.T__1)
                self.state = 129
                self.expresion()


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 132
                self.match(ESJSParser.T__2)
                self.state = 133
                self.match(ESJSParser.ID)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 134
                    self.match(ESJSParser.T__1)
                    self.state = 135
                    self.expresion()


                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ESJSParser.RULE_tipoVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoVariable" ):
                return visitor.visitTipoVariable(self)
            else:
                return visitor.visitChildren(self)




    def tipoVariable(self):

        localctx = ESJSParser.TipoVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipoVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramFuncionFlecha(self):
            return self.getTypedRuleContext(ESJSParser.ParamFuncionFlechaContext,0)


        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ESJSParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ESJSParser.ExpresionContext,i)


        def operadorAsignacion(self):
            return self.getTypedRuleContext(ESJSParser.OperadorAsignacionContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_sentenciaExpresion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaExpresion" ):
                return visitor.visitSentenciaExpresion(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaExpresion(self):

        localctx = ESJSParser.SentenciaExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sentenciaExpresion)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.paramFuncionFlecha()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.expresion()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 64516) != 0):
                    self.state = 147
                    self.operadorAsignacion()
                    self.state = 148
                    self.expresion()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamFuncionFlechaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ESJSParser.ID, 0)

        def formaFuncion(self):
            return self.getTypedRuleContext(ESJSParser.FormaFuncionContext,0)


        def parametros(self):
            return self.getTypedRuleContext(ESJSParser.ParametrosContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_paramFuncionFlecha

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamFuncionFlecha" ):
                return visitor.visitParamFuncionFlecha(self)
            else:
                return visitor.visitChildren(self)




    def paramFuncionFlecha(self):

        localctx = ESJSParser.ParamFuncionFlechaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramFuncionFlecha)
        self._la = 0 # Token type
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [86]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(ESJSParser.ID)
                self.state = 155
                self.match(ESJSParser.T__6)
                self.state = 156
                self.formaFuncion()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(ESJSParser.T__7)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==86:
                    self.state = 158
                    self.parametros()


                self.state = 161
                self.match(ESJSParser.T__8)
                self.state = 162
                self.match(ESJSParser.T__6)
                self.state = 163
                self.formaFuncion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormaFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(ESJSParser.BloqueContext,0)


        def expresion(self):
            return self.getTypedRuleContext(ESJSParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_formaFuncion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormaFuncion" ):
                return visitor.visitFormaFuncion(self)
            else:
                return visitor.visitChildren(self)




    def formaFuncion(self):

        localctx = ESJSParser.FormaFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formaFuncion)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.expresion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorAsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ESJSParser.RULE_operadorAsignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperadorAsignacion" ):
                return visitor.visitOperadorAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def operadorAsignacion(self):

        localctx = ESJSParser.OperadorAsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operadorAsignacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 64516) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ESJSParser.ID, 0)

        def bloque(self):
            return self.getTypedRuleContext(ESJSParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(ESJSParser.ParametrosContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_sentenciaFuncion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaFuncion" ):
                return visitor.visitSentenciaFuncion(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaFuncion(self):

        localctx = ESJSParser.SentenciaFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sentenciaFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(ESJSParser.T__15)
            self.state = 173
            self.match(ESJSParser.ID)
            self.state = 174
            self.match(ESJSParser.T__7)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==86:
                self.state = 175
                self.parametros()


            self.state = 178
            self.match(ESJSParser.T__8)
            self.state = 179
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionAnonimaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(ESJSParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(ESJSParser.ParametrosContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_funcionAnonima

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionAnonima" ):
                return visitor.visitFuncionAnonima(self)
            else:
                return visitor.visitChildren(self)




    def funcionAnonima(self):

        localctx = ESJSParser.FuncionAnonimaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcionAnonima)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(ESJSParser.T__15)
            self.state = 182
            self.match(ESJSParser.T__7)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==86:
                self.state = 183
                self.parametros()


            self.state = 186
            self.match(ESJSParser.T__8)
            self.state = 187
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ESJSParser.ID)
            else:
                return self.getToken(ESJSParser.ID, i)

        def getRuleIndex(self):
            return ESJSParser.RULE_parametros

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = ESJSParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(ESJSParser.ID)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 190
                self.match(ESJSParser.T__2)
                self.state = 191
                self.match(ESJSParser.ID)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaExpresiones(self):
            return self.getTypedRuleContext(ESJSParser.ListaExpresionesContext,0)


        def getRuleIndex(self):
            return ESJSParser.RULE_argumentos
